Start layout maker

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,11 @@
         android:layout_height="match_parent"
         android:weightSum="1">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/errorTxt" />
+
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,5 +54,6 @@
             android:text="Login"
             android:id="@+id/loginButton"
             android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
 </RelativeLayout>
