--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="10dp"
-    android:paddingTop="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="edu.danya140.schedulenew.ScheduleActivity"
-    tools:showIn="@layout/activity_schedule">
+    tools:showIn="@layout/activity_schedule"
+    android:id="@+id/mainLayout">
 
 
 </RelativeLayout>
